2010-02-24  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* config/base/configure.cfg,
	* config/devel/configure.cfg: Revert to SVN version of PolyLib,
	current GIT version does not build anymore.

2010-02-08  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* driver/pocc/driver-clastops.c,
	* driver/pocc/driver-codegen.c: Move the code for dumping
	statement bodies in driver-clastops, as some passes (e.g., array
	contraction) executed in clastops may change the statement bodies.

2010-02-05  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* driver/pocc/driver-clastops.c,
	* driver/pocc/driver-codegen.c,
	* driver/src/options.c: Minor fixes to match the new prototype of
	the vectorizer and the array compaction.

	* config/devel/configure.cfg,
	* config/base/configure.cfg,
	* config/stable/configure.cfg,
	* config/local/configure.cfg,
	* config/irregular/configure.cfg: Add PolyLib in the configuration
	of the storage compaction module.

2010-02-01  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* config/stable/configure.cfg,
	* config/stable/driver.cfg,
	* config/local/configure.cfg,
	* config/local/driver.cfg: Update to use PolyLib-5.22.4

2010-01-29  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch introduces a new module in PoCC.

	optimizers/storcompacter: function-activated. This module performs
	basic storage compaction, by reducing the number of different
	array cells touched by the program.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c: Create and manage new option
	--storage-compact.
	* driver/pocc/driver-clastops.c: Call storage compaction.
	* driver/pocc/Makefile.am,
	* driver/src/Makefile.am: Update with the new module references.

	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg,
	* config/local/configure.cfg,