@@ -26,7 +26,7 @@
 [scoplib]
 category: ir
 module: scoplib
-location: https://alchemy.futurs.inria.fr/svn/users/bastoul/scoplib
+location: https://alchemy.futurs.inria.fr/svn/users/bastoul/scoplib/trunk
 retrieve-method: svn
 bootstrap: autogen.sh
 
