@@ -1,3 +1,12 @@
+2010-03-08  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
+
+	* driver/pocc/driver-clastops.c: Add support for statements
+	modified during array contraction.
+	* config/devel/configure.cfg,
+	* config/base/configure.cfg,
+	* config/irregular/configure.cfg: Update to the new SVN hierarchy
+	for ScopLib.
+
 2010-02-24  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
 
 	* config/base/configure.cfg,
